markdown fix op on quote not being shrunk and general appearance improvements for truncation and omission messages, and reply links

--- a/gulp/res/css/style.css
+++ b/gulp/res/css/style.css
@@ -100,6 +100,9 @@ pre {
 .mt-10 {
 	margin-top: 10px;
 }
+.mt-5 {
+	margin-top: 5px;
+}
 .mv-5 {
 	margin: 5px 0;
 }
@@ -556,7 +559,7 @@ textarea {
 	float: left;
 }
 
-.clear-both {
+.cb {
 	clear: both;
 }
 
